# nrfxlib

./: CMakeLists.txt  Kconfig.nrfxlib
lwm2m_carrier/: CHANGELOG.rst  CMakeLists.txt  Kconfig
lwm2m_carrier/include/: lwm2m_carrier.h  lwm2m_os.h
